[package]
name = "rctix-crm-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
env_logger = "0.10.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
#rbatis deps
rbs = { version = "4.3"}
rbatis = { version = "4.3"}
# rbdc-sqlite = { version = "4.3" }
rbdc-mysql={version="4.3"}
#rbdc-pg={version="4.3"}
#rbdc-mssql={version="4.3"}

#other deps
tokio = { version = "1", features = ["full"] }
log = "0.4"
fast_log = "1.5"

lazy_static = "1.4.0"
toml = "0.7.6"
